<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>eAdmission</groupId>
<artifactId>eAdmission</artifactId>
<packaging>jar</packaging>
<version>1.0-SNAPSHOT</version>
<name>build_demo</name>
<url>http://maven.apache.org</url>
<properties>
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
</properties>

<dependencies>
	<dependency>
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-java</artifactId>
    	<version>2.37.0</version>
    </dependency>
	<dependency>
		<groupId>org.apache.ws.commons.axiom</groupId>
		<artifactId>axiom-api</artifactId>
		<version>1.2.14</version>
	</dependency>
	<dependency>
		<groupId>org.apache.axis2</groupId>
		<artifactId>axis2-transport-local</artifactId>
		<version>1.6.2</version>
	</dependency>
	<dependency>
		<groupId>org.apache.axis2</groupId>
		<artifactId>axis2-kernel</artifactId>
		<version>1.6.2</version>
	</dependency>
	<dependency>
		<groupId>net.sourceforge.jexcelapi</groupId>
		<artifactId>jxl</artifactId>
		<version>2.6.12</version>
	</dependency>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.11</version>
	</dependency>
 	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.8.1</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>3.8</version>
    </dependency> 
</dependencies>
<build>
    <resources>
        <resource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
        </resource>
    </resources>
     <plugins>
     <plugin>
     <groupId>org.apache.mavan.plugins</groupId>
     <artifactId>mavan-compiler-plugin</artifactId>
     <version>2.3.2</version>
     <configuration>
     <source>1.6</source>
     <target>1.6</target>
     </configuration>
     </plugin>
     </plugins>
     </build> 
     <profiles>
    <profile>
        <id>selenium-tests</id>
        <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
					<systemProperties>
					            <property>
					              <name>browser</name>
					              <value>Chrome</value>
					            </property>
					          </systemProperties>
					<suiteXmlFiles> 
					         <suiteXmlFile>RUN.xml</suiteXmlFile>
					         </suiteXmlFiles>
                    <skip>false</skip>
                          <parallel>methods</parallel>
                    <reuseForks>false</reuseForks>
                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
	            	<source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    </profile>
 </profiles>
</project>